--- a/common/v2/features/Dashboard/components/ActionTile.scss
+++ b/common/v2/features/Dashboard/components/ActionTile.scss
@@ -8,6 +8,7 @@
   margin-bottom: 15px;
   background: #fff;
   box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.07);
+  border-radius: 3px;
 
   @media (min-width: 680px) {
     flex: 1 0 115px;
